--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,35 +1,76 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
+ *= require_tree ./partial
+ *= require_tree ./fonts
  *= require_self
  */
 
-/*= require_tree .*/
-
 @import "partial/colors";
 @import "partial/badge";
+@import "partial/header";
+@import "partial/normalize";
+
+@font-face {
+  font-family: 'museo';
+  src: 
+       url('fonts/Museo500-Regular.woff') format('woff'),
+       url('fonts/Museo500-Regular.otf')  format('truetype')
+}
 
 body {
 	background-image: url('/assets/back.png');
-	font-family: 'museo';
+	font-family: 'museo', 'Source Sans pro', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
 	font-size: 12pt;
-	margin-top: 20px;
+	margin: 0px;
 }
 
 .clear {
 	clear: both;
 }
 
+.content {
+	width: 715px;
+	margin:auto;
+	margin-bottom: 20px;
+	padding: 15px;
+	border-radius: 0px 0px 3px 3px;
+	background-color: darken(rgba($color5, .5), 50%);
+}
+
+.title {
+	color: $color3;
+	font-size: 50pt;
+	line-height: 50pt;
+	font-weight: 700;
+	text-align: center;
+	display: block;
+	padding-right: 35px;
+	/*text-shadow: 0px 0px 5px grey;*/
+}
+
+.content#utilities {
+	text-align: center;
+
+	.title {
+		margin-top: 20px;
+		float:left; 
+		width: 300px;
+		font-size: 30px;
+	}
+
+	.equation {
+		float:left;
+		padding:3px;
+		text-align: center;
+		font-size: 40pt;
+		font-weight: bold;
+		line-height: 50pt;
+	}
+
+	.info {
+		float:left;
+		color: $color3;
+	}
+}
 
 .box {
 	display: inline-block;
@@ -41,3 +82,30 @@ body {
 	padding: 2px;
 	margin: 5px;
 }
+
+a {
+	text-decoration: none;
+}
+
+input {
+	border-radius: 2px;
+	border: none;
+	padding: 2px;
+	font: inherit;
+	color:inherit;
+	margin:3px;
+}
+
+input[type="text"], input[type="password"]{
+}
+
+input[type="submit"], button {
+	cursor: pointer;
+	background-color: $color2;
+	color: white;
+	border: 1px solid black;
+	border-radius: 15px;
+	padding-left: 8px;
+	padding-right: 8px;
+}
+
