Changes to Rent, Login page

--- a/app/views/application/_paypal.slim
+++ b/app/views/application/_paypal.slim
@@ -10,7 +10,7 @@
 	/ input type="hidden" name="tax_rate" value="0.000"
 	/ input type="hidden" name="shipping" value="0.00"
 	/ input type="hidden" name="bn" value="PP-BuyNowBF:btn_paynow_LG.gif:NonHosted"
-a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_send-money&email=aprowe@ucsc.edu&amount=10.00"
+a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_send-money&email=aprowe@ucsc.edu&amount=10.00" target="_blank"
 	input.submit type="submit" value="Pay Now"
 
 
