admin functions added Data updated

--- a/app/views/application/_badge.slim
+++ b/app/views/application/_badge.slim
@@ -8,8 +8,26 @@
 			.rent-amount $#{renter.rent}
 			-if renter.paid
 				.status.paid title="Payment Recieved" paid
+					
+
 			-else				
 				= render 'paypal', renter: renter
+
+			-if @adminUser
+				javascript:
+					$(function(){
+						$('#id-#{renter.id} .rent-amount').click(
+						function(){
+							$.ajax({
+								url: 'userPaid',
+								data: {id: '#{renter.id}'},
+								success: function(){
+									$('#id-#{renter.id}').append('<div>Status Changed</div>');
+								}
+							});
+						}
+						).css('cursor','pointer');
+					});
 
 
 		/*.rent-paid Paid: #{renter.paid}*/
