--- a/app/views/application/_adminPanel.slim
+++ b/app/views/application/_adminPanel.slim
@@ -3,6 +3,7 @@
 	h2 Admin Panel
 	button.reset-button Reset Rent
 	button.calc-button Calculate Rent
+	button.message-button Send Texts
 	.clear
 	#status
 
@@ -35,6 +36,12 @@ coffee:
 						$('#status').
 						html('').
 						css('opacity', 1)
+
+		$('.message-button').click ->
+			$.ajax
+				url: 'sendTexts'
+				success: (data)->
+					$('<div>Done!</div>').appendTo '#admin-panel'
 
 scss:
 	#status {
