--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,111 +1,109 @@
 /*
  *= require_tree ./partial
  *= require_tree ./fonts
+ *= require font-awesome
+ *= require login
  *= require_self
+ *= require profile
  */
 
 @import "partial/colors";
-@import "partial/badge";
-@import "partial/header";
 @import "partial/normalize";
 
-@font-face {
-  font-family: 'museo';
-  src: 
-       url('fonts/Museo500-Regular.woff') format('woff'),
-       url('fonts/Museo500-Regular.otf')  format('truetype')
-}
+
+$width: 1000px;
 
 body {
-	background-image: url('/assets/back.png');
-	font-family: 'museo', 'Source Sans pro', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
-	font-size: 12pt;
+	background: $blue;
+	color: white;
+	font-family: source sans pro;
+	padding: 0px;
 	margin: 0px;
 }
 
-.clear {
-	clear: both;
-}
-
-.content {
-	width: 715px;
-	margin:auto;
-	margin-bottom: 20px;
-	padding: 15px;
-	border-radius: 0px 0px 3px 3px;
-	background-color: darken(rgba($color5, .5), 50%);
-}
-
-.title {
-	color: $color3;
-	font-size: 50pt;
-	line-height: 50pt;
-	font-weight: 700;
-	text-align: center;
-	display: block;
-	padding-right: 35px;
-	/*text-shadow: 0px 0px 5px grey;*/
-}
-
-.content#utilities {
-	text-align: center;
-
-	.title {
-		margin-top: 20px;
-		float:left; 
-		width: 300px;
-		font-size: 30px;
-	}
-
-	.equation {
-		float:left;
-		padding:3px;
-		text-align: center;
-		font-size: 40pt;
-		font-weight: bold;
-		line-height: 50pt;
-	}
-
-	.info {
-		float:left;
-		color: $color3;
-	}
-}
-
-.box {
-	display: inline-block;
-	
-	background-color: $color3;
-	border-radius: 1px;
-	color: $color2;
-
-	padding: 2px;
-	margin: 5px;
-}
-
 a {
+	color: inherit;
 	text-decoration: none;
+	@include hover;
 }
 
-input {
-	border-radius: 2px;
-	border: none;
-	padding: 2px;
-	font: inherit;
-	color:inherit;
-	margin:3px;
-}
-
-input[type="text"], input[type="password"]{
-}
-
-input[type="submit"], button {
-	cursor: pointer;
-	background-color: $color2;
+button, input[type="submit"], .button {
+	border-radius: 3px;
+	border: 1px solid rgba(white, 0.5);
+	background: $blue;
 	color: white;
-	border: 1px solid black;
-	border-radius: 15px;
-	padding-left: 8px;
-	padding-right: 8px;
+	cursor: pointer;
+	font-size: 80%;
+	padding: 3px 7px;
+
+	&:hover {
+		background: lighten($blue, 10%);
+	}
+
+}
+
+#slider {
+	text-align: center;
+	display: none;
+	height: 40px;
+	line-height: 40px;
+	width: 100%;
+	background: $darkGray;
+	padding: 2px 10px;
+	box-shadow: inset 0px -2px 5px rgba(black, 0.5);
+
+	> * > * {
+		margin-right: 10px;
+	}
+}
+
+#log {
+	margin: 10px;
+}
+
+#logout{
+	color: white;
+	margin: 10px;
+	margin-right: 13px;
+	float: right;
+	transition: all .2s;
+	&:hover {
+		color: $yellow;
+	}
+}
+
+#settings {
+	@extend #logout;
+	margin-top: 13px;
+}
+
+#content {
+	&:after {
+		content: '';
+		clear: both;
+	}
+	width: $width;
+	margin: auto;
+}
+
+.column {
+	box-sizing: border-box;
+	padding: 5px;
+	float: left;
+
+	&#left-content {
+		width: $width * 0.4;
+	}
+
+	&#right-content {
+		width: $width * 0.6;
+	}
+	// width: $width / 2;
+	// height: 200px;
+}
+
+#activity {
+	width: 100%;
+	height: 120px;
 }
 
