--- a/app/assets/stylesheets/partial/_colors.scss
+++ b/app/assets/stylesheets/partial/_colors.scss
@@ -1,11 +1,19 @@
-$color1: rgb(136, 152, 169);
-$color2: rgb(60, 80, 118);
-$color3: rgba(243, 243, 243, 0.88);
-$color4: rgb(224, 165, 148);
-$color5: rgb(169, 139, 137);
-$color6: #C00;
+$blue: #262f61;
 
-$color21: rgb(204, 219, 240);
-$color22: rgb(36, 42, 64);
-$color23: rgb(177, 57, 69);
-$color24: rgb(239, 218, 153);
+$yellow: #dfd21f;
+
+$green: green;
+
+$red: red;
+
+$darkGray: #3b3b3b;
+
+
+@mixin hover() {
+	cursor: pointer;
+	transition: color .2s;
+
+	&:hover {
+		color: $yellow;
+	}
+}
