--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,9 @@
  *= require_tree ./fonts
  *= require font-awesome
  *= require login
- *= require_self
  *= require profile
+ *= require activity
+ *= require_self
  */
 
 @import "partial/colors";
@@ -42,14 +43,35 @@ button, input[type="submit"], .button {
 
 }
 
+.hidden {
+	display: none;
+}
+
+.right {
+	float: right;
+}
+
+#settings-bar {
+	.change-password {
+		padding-right: 15px;
+	}
+
+	.password {
+		display: none;
+		float: right;
+		vertical-align: middle;
+	}
+
+}
+
 #slider {
 	text-align: center;
 	display: none;
-	height: 40px;
-	line-height: 40px;
+	height: 30px;
+	// line-height: 40px;
 	width: 100%;
 	background: $darkGray;
-	padding: 2px 10px;
+	padding: 10px 10px;
 	box-shadow: inset 0px -2px 5px rgba(black, 0.5);
 
 	> * > * {
@@ -101,9 +123,3 @@ button, input[type="submit"], .button {
 	// width: $width / 2;
 	// height: 200px;
 }
-
-#activity {
-	width: 100%;
-	height: 120px;
-}
-
