--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -128,6 +128,18 @@
 			}
 		}
 
+		.utilities {
+			font-size: 60%;
+			opacity: 0.8;
+			.amount {
+				font-size: 120%;
+				color: $yellow;
+				display: inline-block;
+				margin-right: 5px;
+			}
+
+		}
+
 		.status {
 			display: inline-block;
 			font-size: 100%;
