--- a/app/views/application/login.slim
+++ b/app/views/application/login.slim
@@ -3,7 +3,7 @@
 .login-box
 	.header Login
 	= form_tag({action: 'login', method: 'get'}) do
-		= text_field_tag 'username'
+		= text_field_tag 'username', @username
 		= password_field_tag 'password'
 		= submit_tag 'submit'
 	- if @error
