--- a/app/views/application/_profile.slim
+++ b/app/views/application/_profile.slim
@@ -38,7 +38,7 @@
 
 		- if not small
 			.utilities.row
-				.amount $#{Utilities.last.perPerson}  
+				.amount $#{Utilities.last.perPerson.to_i}  
 				| in utilities (included)
 
 - if not small
