--- a/app/assets/stylesheets/partial/_normalize.scss
+++ b/app/assets/stylesheets/partial/_normalize.scss
@@ -1,2 +1,33 @@
 $padding: 3px;
 $border-radius: 2px;
+
+
+.rotate{
+    -webkit-transition-duration: 0.8s;
+    -moz-transition-duration: 0.8s;
+    -o-transition-duration: 0.8s;
+    transition-duration: 0.8s;
+     
+    -webkit-transition-property: -webkit-transform;
+    -moz-transition-property: -moz-transform;
+    -o-transition-property: -o-transform;
+    transition-property: transform;
+     
+    overflow:hidden;
+ 
+    }  
+ 
+.rotate:hover  
+{
+    -webkit-transform:rotate(360deg);
+    -moz-transform:rotate(360deg);
+    -o-transform:rotate(360deg);
+}  
+
+
+.box {
+    padding: 10px;
+    border-radius: $border-radius;
+    border: 1px solid rgba(black, 0.2);   
+    margin-bottom: 15px; 
+}
