Notice box, Mesage update

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,15 @@ button, input[type="submit"], .button {
 
 }
 
+h1, h2, h3 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+strong {
+	color: $yellow;
+}
+
 .hidden {
 	display: none;
 }
