Comment name filtered

--- a/app/views/application/_comment.slim
+++ b/app/views/application/_comment.slim
@@ -2,7 +2,10 @@
 	.image style="background-image: url('#{comment.renter.image_path}')"
 	.content
 		.row
-			.name #{comment.renter.name}
+			- if @user.username == 'gopro' and comment.renter.username != 'gopro'
+				.name [Name Hidden]
+			- else
+				.name #{comment.renter.name}
 			.time timestamp="#{comment.created_at.in_time_zone.to_i * 1000}"
 		.row 
 				.message #{comment.message}
