--- a/app/views/application/_expenses.slim
+++ b/app/views/application/_expenses.slim
@@ -24,9 +24,10 @@
 				td.price $#{Expense.perPerson.round(2)}
 
 	.row
-		span#post.button Post Expense
-		a.refresh.button href='' Refresh Prices
-		.clear
+		- if House.unconfirmed?
+			span#post.button Post Expense
+			a.refresh.button href='' Refresh Prices
+			.clear
 
 	form#expense-form action="createExpense"
 		.row
