ADded Utilities to expenses grid

--- a/app/views/application/_expenses.slim
+++ b/app/views/application/_expenses.slim
@@ -11,9 +11,13 @@
 		tbody
 			- Expense.all.each do |expense|
 				= render expense
-			
+
 
 		tfoot
+			tr 
+				td Utilities
+				td 
+				td.price $#{Utilities.last.amount.round 2}
 			tr
 				td Total
 				td 
