--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@ $width: 1000px;
 body {
 	background: $blue;
 	color: white;
-	font-family: source sans pro;
+	font-family: source sans pro, Arial, Helvetica, sans-serif;
 	padding: 0px;
 	margin: 0px;
 }
